{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 78,
  "lineage": "e17becd5-efc3-68a9-c511-757941ae1ebc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "testEip1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02621182c4b533924",
            "public_dns": "ec2-52-201-85-106.compute-1.amazonaws.com",
            "public_ip": "52.201.85.106",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "testEip2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0eb0af2fcea3fb36f",
            "public_dns": "ec2-3-225-216-228.compute-1.amazonaws.com",
            "public_ip": "3.225.216.228",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "testEip3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0028698138b451df7",
            "public_dns": "ec2-3-86-174-237.compute-1.amazonaws.com",
            "public_ip": "3.86.174.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_obj",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03f7667d057bf34a9",
            "owner_id": "032037257384",
            "tags": {
              "Name": "objectaws"
            },
            "vpc_id": "vpc-0285a66c85e4897c5"
          },
          "dependencies": [
            "aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natpub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0028698138b451df7",
            "id": "nat-00d944661dea3485b",
            "network_interface_id": "eni-0ff62801e79c9ae1d",
            "private_ip": "192.0.1.139",
            "public_ip": "3.86.174.237",
            "subnet_id": "subnet-07ef819bb1a698cbc",
            "tags": {
              "Name": "objectaws"
            }
          },
          "dependencies": [
            "aws_eip.testEip3",
            "aws_subnet.awsobj1ta",
            "aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test1Public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b2f0ed1a256ea063",
            "owner_id": "032037257384",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00d944661dea3485b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "objectaws"
            },
            "vpc_id": "vpc-0285a66c85e4897c5"
          },
          "dependencies": [
            "aws_eip.testEip3",
            "aws_nat_gateway.natpub",
            "aws_subnet.awsobj1ta",
            "aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test1priva",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04cb0ece9e1aed662",
            "owner_id": "032037257384",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-00d944661dea3485b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "objectaws"
            },
            "vpc_id": "vpc-0285a66c85e4897c5"
          },
          "dependencies": [
            "aws_eip.testEip3",
            "aws_nat_gateway.natpub",
            "aws_subnet.awsobj1ta",
            "aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassa",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e4a63313a18728d",
            "route_table_id": "rtb-0b2f0ed1a256ea063",
            "subnet_id": "subnet-07ef819bb1a698cbc"
          },
          "dependencies": [
            "aws_eip.testEip3",
            "aws_nat_gateway.natpub",
            "aws_route_table.test1Public",
            "aws_subnet.awsobj1ta",
            "aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085a48773289c175c",
            "route_table_id": "rtb-04cb0ece9e1aed662",
            "subnet_id": "subnet-04329eb95199d3aa4"
          },
          "dependencies": [
            "aws_eip.testEip3",
            "aws_nat_gateway.natpub",
            "aws_route_table.test1priva",
            "aws_subnet.awsobj1ta",
            "aws_subnet.awsobj1tb",
            "aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a56ae4d96289115",
            "route_table_id": "rtb-04cb0ece9e1aed662",
            "subnet_id": "subnet-0ed3f8b18b6fef128"
          },
          "dependencies": [
            "aws_eip.testEip3",
            "aws_nat_gateway.natpub",
            "aws_route_table.test1priva",
            "aws_subnet.awsobj1ta",
            "aws_subnet.awsobj1tc",
            "aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awsobj1ta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032037257384:subnet/subnet-07ef819bb1a698cbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.0.1.0/24",
            "id": "subnet-07ef819bb1a698cbc",
            "map_public_ip_on_launch": false,
            "owner_id": "032037257384",
            "tags": {
              "Name": "objectaws"
            },
            "vpc_id": "vpc-0285a66c85e4897c5"
          },
          "dependencies": [
            "aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awsobj1tb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032037257384:subnet/subnet-04329eb95199d3aa4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.0.2.0/24",
            "id": "subnet-04329eb95199d3aa4",
            "map_public_ip_on_launch": false,
            "owner_id": "032037257384",
            "tags": {
              "Name": "objectaws"
            },
            "vpc_id": "vpc-0285a66c85e4897c5"
          },
          "dependencies": [
            "aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awsobj1tc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032037257384:subnet/subnet-0ed3f8b18b6fef128",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.0.3.0/24",
            "id": "subnet-0ed3f8b18b6fef128",
            "map_public_ip_on_launch": false,
            "owner_id": "032037257384",
            "tags": {
              "Name": "objectaws"
            },
            "vpc_id": "vpc-0285a66c85e4897c5"
          },
          "dependencies": [
            "aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_obj",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032037257384:vpc/vpc-0285a66c85e4897c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.0.0.0/16",
            "default_network_acl_id": "acl-02cc53e6421a2349b",
            "default_route_table_id": "rtb-092a2296dffbdd24c",
            "default_security_group_id": "sg-079d950f7291d7759",
            "dhcp_options_id": "dopt-c92d61b2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0285a66c85e4897c5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-092a2296dffbdd24c",
            "owner_id": "032037257384",
            "tags": {
              "Name": "objectaws"
            }
          }
        }
      ]
    }
  ]
}